--- a/todo.txt
+++ b/todo.txt
@@ -1,30 +1,5 @@
-done 1. write a thread to accept files-> acceptance thread
-
-2. realize that I am writing a single instance for a single server. This means one 
-   local ip address and port number to accept connections from. Each new server
-   instantiates and configures their own DDOS_API object. 
-   	a. need to change class instance variables to object instance variables
-	   this is every variable in the first set of variable
-	b. create one thread for open receiving connections-> just use select and all
-	   goes to same place-> io thread
-	c. have reference to receiving object somewhere-> whether instantiated in API
-	   or not
-   to do	   i. be able to marshall object that i have a reference to
-
-3. rewrite backup functions to use marshaling and call from io thread
-
-4. rewrite send and receive to deal with multithreading
-   a. only read fist few letters to cut down on processing time in receive
-
 5. rewrite threads for better multithreading-> eg yields, not busy wait
    a. initialize threads in config_api
-
-done 6. check == vs === and make sure I am using correctly in input_thread
-
-done 7. flesh out how to use get_data-> thinking
-   get_data(data, source_ip, source_port)
-
-done 8. add incoming ip and port info to accept_thread
 
 9. actually get failover working
    Options
@@ -48,6 +23,15 @@ done 8. add incoming ip and port info to accept_thread
 
 13. remove any use of * proc_data and just a string to send
 
+14. refactor config_api and initialize to reflect new structure of the API
+
+15. determine how much the service object should be aware of failover-> do I just
+    pass in the index or the id? If I failover, should the id or index change->
+    Options
+	A. service object is aware of changes-> send new ip, index, or id
+	B. service object is unaware of changes-> hand it old ip, index, or id
+	   -> this seems better, but how to implement and how do I differentiate from
+	   old data
 II general layout/ function definitions
 
 new(int failover_timeout, int or string local_ip, local_port, fail_object):
